--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,11 @@
   display: flex;
   justify-content: center;
 }
+
+@media (max-width: 375px) {
+  .img-rock,
+  .img-scissor > img,
+  .img-paper > img {
+    height: 125px;
+  }
+}
