Updated navbar - added a logo and a slogan on the right replacing rockm paper and scissor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@
   font-weight: bold;
 }
 
+.logo > img {
+  height: 55px;
+  padding-top: 5px;
+  object-fit: contain;
+}
+
 .container {
   border: solid 1px #000;
   margin-top: 35px;
