--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,7 @@ img:hover {
   border: none;
   margin: 5px auto;
   display: flex;
+  font-family: 'Akaya Telivigala', sans-serif;
 }
 
 /*-----------------footer*/
